changed meta description for the app.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta http-equiv="refresh" content="1800" />
-  <meta name="description" content="My Thesis built in React.js, Node.js, Express.js" />
+  <meta name="description" content="HR Management System for Samcint Solutions" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
